test_data/gateway.json
{
    "apiVersion": "networking.k8s.io/v1beta1",
    "kind": "Ingress",
    "metadata": {
        "annotations": {
            "kubernetes.io/ingress.class": "istio"
        },
        "creationTimestamp": "2019-02-19T19:32:09Z",
        "generation": 1,
        "labels": {
            "app": "bookinfo"
        },
        "name": "gateway",
        "namespace": "default",
        "resourceVersion": "1007542",
        "selfLink": "/apis/networking.k8s.io/v1beta1/namespaces/default/ingresses/gateway",
        "uid": "0c775e4b-347d-11e9-9d73-0800275638b6"
    },
    "spec": {
        "rules": [
            {
                "http": {
                    "paths": [
                        {
                            "backend": {
                                "serviceName": "productpage",
                                "servicePort": 9080
                            },
                            "path": "/productpage"
                        },
                        {
                            "backend": {
                                "serviceName": "productpage",
                                "servicePort": 9080
                            },
                            "path": "/login"
                        },
                        {
                            "backend": {
                                "serviceName": "productpage",
                                "servicePort": 9080
                            },
                            "path": "/logout"
                        },
                        {
                            "backend": {
                                "serviceName": "productpage",
                                "servicePort": 9080
                            },
                            "path": "/api/v1/products.*"
                        }
                    ]
                }
            }
        ]
    },
    "status": {
        "loadBalancer": {}
    }
}
